tests/tooling/fixtures/native/recovery/negative/negative_return_void_with_value.objc3
// Expected diagnostic code(s): O3S211.
module NegativeReturnVoidWithValue;

fn helper() -> void {
  return 1;
}

fn main() -> i32 {
  helper();
  return 0;
}
